--- a/index.html
+++ b/index.html
@@ -5,66 +5,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Try It Free
+  <header>
+    <div class="header">
+      <div class="logo"><a title="logo" href="#"><img src="logo.svg" alt=""></a></div>
+      <button class="try-it-btn">Try It Free</button>
+    </div>
 
-  Build The Community Your Fans Will Love
+    <section class="hero">
+      <div class="hero-description">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+        Create connections with your users as you engage in genuine discussion.</p>
+        <button class="get-started-btn">
+          Get Started For Free
+        </button>
+      </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+      <div class="hero-img">
+      </div>
 
-  Get Started For Free
+    </section>
+  </header>
 
-  Grow Together
+  <main>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+    <div class="card grow-together">
+      <h2>Grow Together</h2>
+      <p class="card-description">Generate meaningful discussions with your audience and build a strong, loyal community.
+      Think of the insightful conversations you miss out on with a feedback form.</p>
+    </div>
+    <div class="card conversation">
+      <h2>Flowing Conversations</h2>
+      <p class="card-description">You wouldn't paginate a conversation in real life, so why do it online? Our threads
+      have just-in-time loading for a more natural flow.</p>
+    </div>
+    <div class="card audience">
+      <h2>Your Users</h2>
+      <p class="card-description">It takes no time at all to integrate Huddle with your app's authentication solution.
+      This means, once signed in to your app, your users can start chatting immediately.</p>
+    </div>
 
-  Flowing Conversations
+  </main>
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
+  <div class="contact">
+    <h2>  Ready To Build Your Community?</h2>
+    <button class="get-started-btn large">Get Started For Free</button>
+  </div>
 
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <div class="footer-logo">
+      <!-- SVG -->
+    </div>
+    <div class="footer-container">
+      <ul class="footer-contact">
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua</li>
+        <li>+1-543-123-4567</li>
+        <li>example@huddle.com</li>
+      </ul>
+      <ul>
+        <li>About Us</li>
+        <li>What We Do</li>
+        <li>FAQ</li>
+      </ul>
+      <ul>
+        <li>Career</li>
+        <li>Blog</li>
+        <li>Contact Us</li>
+      </ul>
+      <ul class="social-links">
+        <li><a class="fa" href="#" title="facebook"></a></li>
+        <li><a class="fa" href="#" title="twitter"></a></li>
+        <li><a class="fa" href="#" title="instagram"></a></li>
+      </ul>
+    </div>
+    <div class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</div>
   </footer>
 </body>
 </html>
