Implemented header styles.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -8,12 +9,18 @@
 
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
+
 <body>
 
   <header>
     <div class="header">
-      <div class="logo"><a title="logo" href="#"><img src="logo.svg" alt=""></a></div>
+      <a class="logo-anchor" title="logo" href="#">
+        <img src="images/logo.svg" alt="Brand">
+      </a>
       <button class="try-it-btn">Try It Free</button>
     </div>
 
@@ -21,13 +28,14 @@
       <div class="hero-description">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-        Create connections with your users as you engage in genuine discussion.</p>
+          Create connections with your users as you engage in genuine discussion.</p>
         <button class="get-started-btn">
           Get Started For Free
         </button>
       </div>
 
       <div class="hero-img">
+        <img src="images/illustration-mockups.svg" alt="">
       </div>
 
     </section>
@@ -38,23 +46,23 @@
     <div class="card grow-together">
       <h2>Grow Together</h2>
       <p class="card-description">Generate meaningful discussions with your audience and build a strong, loyal community.
-      Think of the insightful conversations you miss out on with a feedback form.</p>
+        Think of the insightful conversations you miss out on with a feedback form.</p>
     </div>
     <div class="card conversation">
       <h2>Flowing Conversations</h2>
       <p class="card-description">You wouldn't paginate a conversation in real life, so why do it online? Our threads
-      have just-in-time loading for a more natural flow.</p>
+        have just-in-time loading for a more natural flow.</p>
     </div>
     <div class="card audience">
       <h2>Your Users</h2>
       <p class="card-description">It takes no time at all to integrate Huddle with your app's authentication solution.
-      This means, once signed in to your app, your users can start chatting immediately.</p>
+        This means, once signed in to your app, your users can start chatting immediately.</p>
     </div>
 
   </main>
 
   <div class="contact">
-    <h2>  Ready To Build Your Community?</h2>
+    <h2> Ready To Build Your Community?</h2>
     <button class="get-started-btn large">Get Started For Free</button>
   </div>
 
@@ -65,7 +73,7 @@
     <div class="footer-container">
       <ul class="footer-contact">
         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua</li>
+          incididunt ut labore et dolore magna aliqua</li>
         <li>+1-543-123-4567</li>
         <li>example@huddle.com</li>
       </ul>
@@ -88,4 +96,5 @@
     <div class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</div>
   </footer>
 </body>
+
 </html>
