Implemented cards styles.

--- a/index.html
+++ b/index.html
@@ -44,19 +44,35 @@
   <main>
 
     <div class="card grow-together">
-      <h2>Grow Together</h2>
-      <p class="card-description">Generate meaningful discussions with your audience and build a strong, loyal community.
-        Think of the insightful conversations you miss out on with a feedback form.</p>
+      <div class="card-image">
+        <img src="images/illustration-grow-together.svg" alt="">
+      </div>
+      <div class="card-description">
+        <h2>Grow Together</h2>
+        <p>Generate meaningful discussions with your audience and build a strong, loyal community.
+          Think of the insightful conversations you miss out on with a feedback form.</p>
+      </div>
+
     </div>
     <div class="card conversation">
-      <h2>Flowing Conversations</h2>
-      <p class="card-description">You wouldn't paginate a conversation in real life, so why do it online? Our threads
-        have just-in-time loading for a more natural flow.</p>
+      <div class="card-image">
+        <img src="images/illustration-flowing-conversation.svg" alt="">
+      </div>
+      <div class="card-description">
+        <h2>Flowing Conversations</h2>
+        <p class="card-description">You wouldn't paginate a conversation in real life, so why do it online? Our threads
+          have just-in-time loading for a more natural flow.</p>
+      </div>
     </div>
     <div class="card audience">
-      <h2>Your Users</h2>
-      <p class="card-description">It takes no time at all to integrate Huddle with your app's authentication solution.
-        This means, once signed in to your app, your users can start chatting immediately.</p>
+      <div class="card-image">
+        <img src="images/illustration-your-users.svg" alt="">
+      </div>
+      <div class="card-description">
+        <h2>Your Users</h2>
+        <p class="card-description">It takes no time at all to integrate Huddle with your app's authentication solution.
+          This means, once signed in to your app, your users can start chatting immediately.</p>
+      </div>
     </div>
 
   </main>
