--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
@@ -61,7 +62,7 @@
       </div>
       <div class="card-description">
         <h2>Flowing Conversations</h2>
-        <p class="card-description">You wouldn't paginate a conversation in real life, so why do it online? Our threads
+        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads
           have just-in-time loading for a more natural flow.</p>
       </div>
     </div>
@@ -71,7 +72,7 @@
       </div>
       <div class="card-description">
         <h2>Your Users</h2>
-        <p class="card-description">It takes no time at all to integrate Huddle with your app's authentication solution.
+        <p>It takes no time at all to integrate Huddle with your app's authentication solution.
           This means, once signed in to your app, your users can start chatting immediately.</p>
       </div>
     </div>
@@ -98,7 +99,7 @@
     </div>
     <div class="footer-container">
       <ul class="contacts">
-        <li class="footer-text icon">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        <li class="footer-contacts icon">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua</li>
         <li class="phone icon">+1-543-123-4567</li>
         <li class="email icon">example@huddle.com</li>
